--- a/Produtos.html
+++ b/Produtos.html
@@ -14,7 +14,7 @@
     <header>
         <div class="cab">
                 <p>Cliente</p>
-                <a class="nav-link" href="Cadastrar cliente.html">Cliente s/bootStrap</a>
+                <a class="nav-link" href="Cadastro_com_Bootstrap.html">Cliente</a>
             
                 <a class="nav-link" href="Produtos.html">Produtos</a>
             
