--- a/Produtos.html
+++ b/Produtos.html
@@ -13,7 +13,7 @@
   <body>
     <header>
         <div class="cab">
-                <p>Cliente</p>
+                <p>Produto</p>
                 <a class="nav-link" href="Cadastro_com_Bootstrap.html">Cliente</a>
             
                 <a class="nav-link" href="Produtos.html">Produtos</a>
