--- a/Cadastro_com_Bootstrap.html
+++ b/Cadastro_com_Bootstrap.html
@@ -29,7 +29,7 @@
       
 
         <form action="Clientes">
-          <h2>Cadastro Cliente</h2>
+          <h2>Cadastrar Cliente</h2>
           <div class="checks">
             <div class="form-check">
               <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
