--- a/Produtos.html
+++ b/Produtos.html
@@ -28,7 +28,7 @@
    
 
         <form action="Produtos">
-          <h2>Cadastrar Produtos</h2>
+          <h2>Cadastrar Produto</h2>
 
 
           <label for="codigo do produto">Código do produto:</label>
